Refactor file handling in Packified mod to use Path instead of Identifier, enhance audio file support, and improve folder selection functionality